Updated 5.2 SRD magic items with tables

--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/amulet-of-the-planes.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/amulet-of-the-planes.html
@@ -16,6 +16,36 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>While wearing this amulet, you can take a Magic action to name a location that you are familiar with on another plane of existence. Then make a DC 15 Intelligence (Arcana) check. On a successful check, you cast Plane Shift. On a failed check, you and each creature and object within 15 feet of you travel to a random destination determined by rolling 1d100 and consulting the following table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/amulet-of-the-planes.md">Markdown Format</a></p>
+<p>While wearing this amulet, you can take a Magic action to name a location that you are familiar with on another plane of existence. Then make a DC 15 Intelligence (Arcana) check. On a successful check, you cast <em>Plane Shift</em>. On a failed check, you and each creature and object within 15 feet of you travel to a random destination determined by rolling 1d100 and consulting the following table.</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Destination</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–60</td>
+<td>Random location on the plane you named</td>
+</tr>
+<tr>
+<td>61–70</td>
+<td>Random location on an Inner Plane determined by rolling 1d6: on a <strong>1,</strong> the Plane of Air; on a <strong>2,</strong> the Plane of Earth; on a <strong>3,</strong> the Plane of Fire; on a <strong>4,</strong> the Plane of Water; on a <strong>5,</strong> the Feywild; on a <strong>6,</strong> the Shadowfell</td>
+</tr>
+<tr>
+<td>71–80</td>
+<td>Random location on an Outer Plane determined by rolling 1d8: on a <strong>1,</strong> Arborea; on a <strong>2,</strong> Arcadia; on a <strong>3,</strong> the Beastlands; on a <strong>4,</strong> Bytopia; on a <strong>5,</strong> Elysium; on a <strong>6,</strong> Mechanus; on a <strong>7,</strong> Mount Celestia; on an <strong>8,</strong> Ysgard</td>
+</tr>
+<tr>
+<td>81–90</td>
+<td>Random location on an Outer Plane determined by rolling 1d8: on a <strong>1,</strong> the Abyss; on a <strong>2,</strong> Acheron; on a <strong>3,</strong> Carceri; on a <strong>4,</strong> Gehenna; on a <strong>5,</strong> Hades; on a <strong>6,</strong> Limbo; on a <strong>7,</strong> the Nine Hells; on an <strong>8,</strong> Pandemonium</td>
+</tr>
+<tr>
+<td>91–00</td>
+<td>Random location on the Astral Plane</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/amulet-of-the-planes.md">Markdown Format</a></p>
 </body>
 </html>
