--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/armor-of-resistance.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/armor-of-resistance.html
@@ -16,6 +16,56 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You have Resistance to one type of damage while you wear this armor. The GM chooses the type or determines it randomly by rolling on the following table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/armor-of-resistance.md">Markdown Format</a></p>
+<p>You have Resistance to one type of damage while you wear this armor. The GM chooses the type or determines it randomly by rolling on the following table.</p>
+<table>
+<thead>
+<tr>
+<th>1d10</th>
+<th>Damage Type</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Acid</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Cold</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Fire</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Force</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Lightning</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Necrotic</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Poison</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Psychic</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Radiant</td>
+</tr>
+<tr>
+<td>10</td>
+<td>Thunder</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/armor-of-resistance.md">Markdown Format</a></p>
 </body>
 </html>
