--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/belt-of-giant-strength.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/belt-of-giant-strength.html
@@ -16,6 +16,42 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>While wearing this belt, your Strength changes to a score granted by the belt. The type of giant determines the score (see the table below). The item has no effect on you if your Strength without the belt is equal to or greater than the belt's score.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/belt-of-giant-strength.md">Markdown Format</a></p>
+<p>While wearing this belt, your Strength changes to a score granted by the belt. The type of giant determines the score (see the table below). The item has no effect on you if your Strength without the belt is equal to or greater than the belt's score.</p>
+<table>
+<thead>
+<tr>
+<th>Belt</th>
+<th>Str.</th>
+<th>Rarity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Belt of Giant Strength (hill)</td>
+<td>21</td>
+<td>Rare</td>
+</tr>
+<tr>
+<td>Belt of Giant Strength (frost or stone)</td>
+<td>23</td>
+<td>Very Rare</td>
+</tr>
+<tr>
+<td>Belt of Giant Strength (fire)</td>
+<td>25</td>
+<td>Very Rare</td>
+</tr>
+<tr>
+<td>Belt of Giant Strength (cloud)</td>
+<td>27</td>
+<td>Legendary</td>
+</tr>
+<tr>
+<td>Belt of Giant Strength (storm)</td>
+<td>29</td>
+<td>Legendary</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/belt-of-giant-strength.md">Markdown Format</a></p>
 </body>
 </html>
