--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/cube-of-force.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/cube-of-force.html
@@ -16,6 +16,42 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This cube is about an inch across. Each face has a distinct marking on it. You can press one of those faces, expend the number of charges required for it, and thereby cast the spell associated with it (save DC 17), as shown in the Cube of Force Faces table. The cube starts with 10 charges, and it regains 1d6 expended charges daily at dawn.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/cube-of-force.md">Markdown Format</a></p>
+<p>This cube is about an inch across. Each face has a distinct marking on it. You can press one of those faces, expend the number of charges required for it, and thereby cast the spell associated with it (save DC 17), as shown in the Cube of Force Faces table.</p>
+<p>The cube starts with 10 charges, and it regains 1d6 expended charges daily at dawn.</p>
+<p>Table: Cube of Force Faces</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Mage Armor</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Shield</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Tiny Hut</td>
+<td>3</td>
+</tr>
+<tr>
+<td>Private Sanctum</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Resilient Sphere</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Wall of Force</td>
+<td>5</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/cube-of-force.md">Markdown Format</a></p>
 </body>
 </html>
