--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/dragon-scale-mail.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/dragon-scale-mail.html
@@ -16,6 +16,58 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>Dragon Scale Mail is made of the scales of one kind of dragon. Sometimes dragons collect their cast-off scales and gift them. Other times, hunters carefully preserve the hide of a dead dragon. In either case, Dragon Scale Mail is highly valued. While wearing this armor, you gain a +1 bonus to Armor Class, you have Advantage on saving throws against the breath weapons of Dragons, and you have Resistance to one damage type determined by the kind of dragon that provided the scales (see the accompanying table). Additionally, you can focus your senses as a Magic action to discern the distance and direction to the closest dragon within 30 miles of yourself that is of the same type as the armor. This action can't be used again until the next dawn.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/dragon-scale-mail.md">Markdown Format</a></p>
+<p><em>Dragon Scale Mail</em> is made of the scales of one kind of dragon. Sometimes dragons collect their cast-off scales and gift them. Other times, hunters carefully preserve the hide of a dead dragon. In either case, <em>Dragon Scale Mail</em> is highly valued.</p>
+<p>While wearing this armor, you gain a +1 bonus to Armor Class, you have Advantage on saving throws against the breath weapons of Dragons, and you have Resistance to one damage type determined by the kind of dragon that provided the scales (see the accompanying table).</p>
+<p>Additionally, you can focus your senses as a Magic action to discern the distance and direction to the closest dragon within 30 miles of yourself that is of the same type as the armor. This action can't be used again until the next dawn.</p>
+<table>
+<thead>
+<tr>
+<th>Dragon</th>
+<th>Resistance</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Black</td>
+<td>Acid</td>
+</tr>
+<tr>
+<td>Blue</td>
+<td>Lightning</td>
+</tr>
+<tr>
+<td>Brass</td>
+<td>Fire</td>
+</tr>
+<tr>
+<td>Bronze</td>
+<td>Lightning</td>
+</tr>
+<tr>
+<td>Copper</td>
+<td>Acid</td>
+</tr>
+<tr>
+<td>Gold</td>
+<td>Fire</td>
+</tr>
+<tr>
+<td>Green</td>
+<td>Poison</td>
+</tr>
+<tr>
+<td>Red</td>
+<td>Fire</td>
+</tr>
+<tr>
+<td>Silver</td>
+<td>Cold</td>
+</tr>
+<tr>
+<td>White</td>
+<td>Cold</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/dragon-scale-mail.md">Markdown Format</a></p>
 </body>
 </html>
