--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/elemental-gem.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/elemental-gem.html
@@ -16,6 +16,32 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This gem contains a mote of elemental energy. When you take a Utilize action to break the gem, an elemental is summoned (see "Monsters" for its stat block), and the gem ceases to be magical. The elemental appears in an unoccupied space as close to the broken gem as possible, understands your languages, obeys your commands, and takes its turn immediately after you on your Initiative count. The elemental disappears after 1 hour, when it dies, or when you dismiss it as a Bonus Action. The type of gem determines the elemental, as shown in the following table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/elemental-gem.md">Markdown Format</a></p>
+<p>This gem contains a mote of elemental energy. When you take a Utilize action to break the gem, an elemental is summoned (see "Monsters" for its stat block), and the gem ceases to be magical. The elemental appears in an unoccupied space as close to the broken gem as possible, understands your languages, obeys your commands, and takes its turn immediately after you on your Initiative count. The elemental disappears after 1 hour, when it dies, or when you dismiss it as a Bonus Action. The type of gem determines the elemental, as shown in the following table.</p>
+<table>
+<thead>
+<tr>
+<th>Gem</th>
+<th>Summoned Elemental</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Blue sapphire</td>
+<td>Air Elemental</td>
+</tr>
+<tr>
+<td>Emerald</td>
+<td>Water Elemental</td>
+</tr>
+<tr>
+<td>Red corundum</td>
+<td>Fire Elemental</td>
+</tr>
+<tr>
+<td>Yellow diamond</td>
+<td>Earth Elemental</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/elemental-gem.md">Markdown Format</a></p>
 </body>
 </html>
