--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/manual-of-golems.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/manual-of-golems.html
@@ -16,6 +16,44 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This tome contains information and incantations necessary to make a particular type of golem. The GM chooses the type or determines it randomly by rolling on the accompanying table. To decipher and use the manual, you must be a spellcaster with at least two level 5 spell slots. A creature that can't use a Manual of Golems and attempts to read it takes 6d6 Psychic damage. To create a golem, you must spend the time shown on the table, working without interruption with the manual at hand and resting no more than 8 hours per day. You must also pay the specified cost to purchase supplies. Once you finish creating the golem, the book is consumed in eldritch flames. The golem becomes animate when the ashes of the manual are sprinkled on it. See "Monsters" for the golem's stat block. The golem is under your control, and it understands and obeys your commands.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/manual-of-golems.md">Markdown Format</a></p>
+<p>This tome contains information and incantations necessary to make a particular type of golem. The GM chooses the type or determines it randomly by rolling on the accompanying table. To decipher and use the manual, you must be a spellcaster with at least two level 5 spell slots. A creature that can't use a <em>Manual of Golems</em> and attempts to read it takes 6d6 Psychic damage.</p>
+<p>To create a golem, you must spend the time shown on the table, working without interruption with the manual at hand and resting no more than 8 hours per day. You must also pay the specified cost to purchase supplies.</p>
+<p>Once you finish creating the golem, the book is consumed in eldritch flames. The golem becomes animate when the ashes of the manual are sprinkled on it. See "Monsters" for the golem's stat block. The golem is under your control, and it understands and obeys your commands.</p>
+<table>
+<thead>
+<tr>
+<th>1d20</th>
+<th>Golem</th>
+<th>Time</th>
+<th>Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1–5</td>
+<td>Clay Golem</td>
+<td>30 days</td>
+<td>65,000 GP</td>
+</tr>
+<tr>
+<td>6–17</td>
+<td>Flesh Golem</td>
+<td>60 days</td>
+<td>50,000 GP</td>
+</tr>
+<tr>
+<td>18</td>
+<td>Iron Golem</td>
+<td>120 days</td>
+<td>100,000 GP</td>
+</tr>
+<tr>
+<td>19–20</td>
+<td>Stone Golem</td>
+<td>90 days</td>
+<td>80,000 GP</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/manual-of-golems.md">Markdown Format</a></p>
 </body>
 </html>
