--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/potion-of-giant-strength.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/potion-of-giant-strength.html
@@ -16,6 +16,43 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>When you drink this potion, your Strength score changes for 1 hour. The type of giant determines the score (see the table below). The potion has no effect on you if your Strength is equal to or greater than that score. This potion's transparent liquid has floating in it a sliver of light resembling a giant's fingernail.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/potion-of-giant-strength.md">Markdown Format</a></p>
+<p>When you drink this potion, your Strength score changes for 1 hour. The type of giant determines the score (see the table below). The potion has no effect on you if your Strength is equal to or greater than that score.</p>
+<p>This potion's transparent liquid has floating in it a sliver of light resembling a giant's fingernail.</p>
+<table>
+<thead>
+<tr>
+<th>Potion</th>
+<th>Str.</th>
+<th>Rarity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Potion of Giant Strength (hill)</td>
+<td>21</td>
+<td>Uncommon</td>
+</tr>
+<tr>
+<td>Potion of Giant Strength (frost or stone)</td>
+<td>23</td>
+<td>Rare</td>
+</tr>
+<tr>
+<td>Potion of Giant Strength (fire)</td>
+<td>25</td>
+<td>Rare</td>
+</tr>
+<tr>
+<td>Potion of Giant Strength (cloud)</td>
+<td>27</td>
+<td>Very Rare</td>
+</tr>
+<tr>
+<td>Potion of Giant Strength (storm)</td>
+<td>29</td>
+<td>Legendary</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/potion-of-giant-strength.md">Markdown Format</a></p>
 </body>
 </html>
