--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/potions-of-healing.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/potions-of-healing.html
@@ -16,6 +16,38 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You regain Hit Points when you drink this potion. The number of Hit Points depends on the potion's rarity, as shown in the table below. Whatever its potency, the potion's red liquid glimmers when agitated.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/potions-of-healing.md">Markdown Format</a></p>
+<p>You regain Hit Points when you drink this potion. The number of Hit Points depends on the potion's rarity, as shown in the table below.</p>
+<p>Whatever its potency, the potion's red liquid glimmers when agitated.</p>
+<table>
+<thead>
+<tr>
+<th>Potion</th>
+<th>HP Regained</th>
+<th>Rarity</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Potion of Healing</td>
+<td>2d4 + 2</td>
+<td>Common</td>
+</tr>
+<tr>
+<td>Potion of Healing (greater)</td>
+<td>4d4 + 4</td>
+<td>Uncommon</td>
+</tr>
+<tr>
+<td>Potion of Healing (superior)</td>
+<td>8d4 + 8</td>
+<td>Rare</td>
+</tr>
+<tr>
+<td>Potion of Healing (supreme)</td>
+<td>10d4 + 20</td>
+<td>Very Rare</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/potions-of-healing.md">Markdown Format</a></p>
 </body>
 </html>
