--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-elemental-command.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-elemental-command.html
@@ -16,6 +16,41 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>Each Ring of Elemental Command is linked to one of the four Elemental Planes. The GM chooses or randomly determines the linked plane. For example, a Ring of Elemental Command (air) is linked to the Elemental Plane of Air. Every Ring of Elemental Command has the following two properties: Elemental Bane. While wearing the ring, you have Advantage on attack rolls against Elementals and they have Disadvantage on attack rolls against you. Elemental Compulsion. While wearing the ring, you can take a Magic action to try to compel an Elemental you see within 60 feet of yourself. The Elemental makes a DC 18 Wisdom saving throw. On a failed save, the Elemental has the Charmed condition until the start your next turn, and you determine what it does with its move and action on its next turn. Elemental Focus. While wearing the ring, you benefit from additional properties corresponding to the ring's linked Elemental Plane: Air. You know Auran, you have Resistance to Lightning damage, and you have a Fly Speed equal to your Speed and can hover. Earth. You know Terran, and you have Resistance to Acid damage. Terrain composed of rubble, rocks, or dirt isn't Difficult Terrain for you. In addition, you can move through solid earth or rock as if those areas were Difficult Terrain without disturbing the matter through which you pass. If you end your turn in solid earth or rock, you are shunted out to the nearest unoccupied space you last occupied. Fire. You know Ignan, and you have Immunity to Fire damage. Water. You know Aquan, you gain a Swim Speed of 60 feet, and you can breathe underwater. Spellcasting. The ring has 5 charges and regains 1d4 + 1 expended charges daily at dawn. While wearing the ring, you can cast a spell from it. Choose the spell from the list of available spells based on the Elemental Plane the ring is linked to, as shown in the following table. The table indicates how many charges you must expend to cast the spell, which has a save DC of 18.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-elemental-command.md">Markdown Format</a></p>
+<p>Each <em>Ring of Elemental Command</em> is linked to one of the four Elemental Planes. The GM chooses or randomly determines the linked plane. For example, a <em>Ring of Elemental Command</em> (air) is linked to the Elemental Plane of Air.</p>
+<p>Every <em>Ring of Elemental Command</em> has the following two properties:</p>
+<p><strong><em>Elemental Bane.</em></strong> While wearing the ring, you have Advantage on attack rolls against Elementals and they have Disadvantage on attack rolls against you.</p>
+<p><strong><em>Elemental Compulsion.</em></strong> While wearing the ring, you can take a Magic action to try to compel an Elemental you see within 60 feet of yourself. The Elemental makes a DC 18 Wisdom saving throw. On a failed save, the Elemental has the Charmed condition until the start your next turn, and you determine what it does with its move and action on its next turn.</p>
+<p><strong><em>Elemental Focus.</em></strong> While wearing the ring, you benefit from additional properties corresponding to the ring's linked Elemental Plane:</p>
+<p><strong>Air.</strong> You know Auran, you have Resistance to Lightning damage, and you have a Fly Speed equal to your Speed and can hover.</p>
+<p><strong>Earth.</strong> You know Terran, and you have Resistance to Acid damage. Terrain composed of rubble, rocks, or dirt isn't Difficult Terrain for you. In addition, you can move through solid earth or rock as if those areas were Difficult Terrain without disturbing the matter through which you pass. If you end your turn in solid earth or rock, you are shunted out to the nearest unoccupied space you last occupied.</p>
+<p><strong>Fire.</strong> You know Ignan, and you have Immunity to Fire damage.</p>
+<p><strong>Water.</strong> You know Aquan, you gain a Swim Speed of 60 feet, and you can breathe underwater.</p>
+<p><strong><em>Spellcasting.</em></strong> The ring has 5 charges and regains 1d4 + 1 expended charges daily at dawn. While wearing the ring, you can cast a spell from it. Choose the spell from the list of available spells based on the Elemental Plane the ring is linked to, as shown in the following table. The table indicates how many charges you must expend to cast the spell, which has a save DC of 18.</p>
+<table>
+<thead>
+<tr>
+<th>Plane</th>
+<th>Spells (Charges)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Air</td>
+<td>Chain Lightning (3 charges), Feather Fall (0 charges), Gust of Wind (2 charges), Wind Wall (1 charge)</td>
+</tr>
+<tr>
+<td>Earth</td>
+<td>Earthquake (5 charges), Stone Shape (2 charges), Stoneskin (3 charges), Wall of Stone (3 charges)</td>
+</tr>
+<tr>
+<td>Fire</td>
+<td>Burning Hands (1 charge), Fireball (2 charges), Fire Storm (4 charges), Wall of Fire (3 charges)</td>
+</tr>
+<tr>
+<td>Water</td>
+<td>Create or Destroy Water (1 charge), Ice Storm (2 charges), Tsunami (5 charges), Wall of Ice (3 charges), Water Walk (2 charges)</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-elemental-command.md">Markdown Format</a></p>
 </body>
 </html>
