--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-resistance.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-resistance.html
@@ -16,6 +16,67 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You have Resistance to one damage type while wearing this ring. The gemstone in the ring indicates the type, which the GM chooses or determines randomly by rolling on the following table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-resistance.md">Markdown Format</a></p>
+<p>You have Resistance to one damage type while wearing this ring. The gemstone in the ring indicates the type, which the GM chooses or determines randomly by rolling on the following table.</p>
+<table>
+<thead>
+<tr>
+<th>1d10</th>
+<th>Damage Type</th>
+<th>Gemstone</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Acid</td>
+<td>Pearl</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Cold</td>
+<td>Tourmaline</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Fire</td>
+<td>Garnet</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Force</td>
+<td>Sapphire</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Lightning</td>
+<td>Citrine</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Necrotic</td>
+<td>Jet</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Poison</td>
+<td>Amethyst</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Psychic</td>
+<td>Jade</td>
+</tr>
+<tr>
+<td>9</td>
+<td>Radiant</td>
+<td>Topaz</td>
+</tr>
+<tr>
+<td>10</td>
+<td>Thunder</td>
+<td>Spinel</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-resistance.md">Markdown Format</a></p>
 </body>
 </html>
