--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-frost.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-frost.html
@@ -16,6 +16,34 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You have Resistance to Cold damage while you hold this staff. Spells. The staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell. Regaining Charges. The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff turns to water and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-frost.md">Markdown Format</a></p>
+<p>You have Resistance to Cold damage while you hold this staff.</p>
+<p><strong><em>Spells.</em></strong> The staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cone of Cold</td>
+<td>5</td>
+</tr>
+<tr>
+<td>Fog Cloud</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Ice Storm</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Wall of Ice</td>
+<td>4</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Regaining Charges.</em></strong> The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff turns to water and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-frost.md">Markdown Format</a></p>
 </body>
 </html>
