--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-healing.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-healing.html
@@ -16,6 +16,29 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spellcasting ability modifier. The table indicates how many charges you must expend to cast the spell. Regaining Charges. The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff vanishes in a flash of light, lost forever.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-healing.md">Markdown Format</a></p>
+<p>This staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spellcasting ability modifier. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Cure Wounds</td>
+<td>1 charge per spell level (maximum 4 for a level 4 spell)</td>
+</tr>
+<tr>
+<td>Lesser Restoration</td>
+<td>2</td>
+</tr>
+<tr>
+<td>Mass Cure Wounds</td>
+<td>5</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Regaining Charges.</em></strong> The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff vanishes in a flash of light, lost forever.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-healing.md">Markdown Format</a></p>
 </body>
 </html>
