--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-swarming-insects.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-swarming-insects.html
@@ -16,6 +16,27 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This staff has 10 charges. Insect Cloud. While holding the staff, you can take a Magic action and expend 1 charge to cause a swarm of harmless flying insects to fill a 30-foot Emanation originating from you. The insects remain for 10 minutes, making the area Heavily Obscured for creatures other than you. A strong wind (like that created by Gust of Wind) disperses the swarm and ends the effect. Spells. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC and spell attack modifier. The table indicates how many charges you must expend to cast the spell. Regaining Charges. The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, a swarm of insects consumes and destroys the staff, then disperses.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-swarming-insects.md">Markdown Format</a></p>
+<p>This staff has 10 charges.</p>
+<p><strong><em>Insect Cloud.</em></strong> While holding the staff, you can take a Magic action and expend 1 charge to cause a swarm of harmless flying insects to fill a 30-foot Emanation originating from you. The insects remain for 10 minutes, making the area Heavily Obscured for creatures other than you. A strong wind (like that created by <em>Gust of Wind</em>) disperses the swarm and ends the effect.</p>
+<p><strong><em>Spells.</em></strong> While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC and spell attack modifier. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Giant Insect</td>
+<td>4</td>
+</tr>
+<tr>
+<td>Insect Plague</td>
+<td>5</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Regaining Charges.</em></strong> The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, a swarm of insects consumes and destroys the staff, then disperses.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-swarming-insects.md">Markdown Format</a></p>
 </body>
 </html>
