--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-the-woodlands.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-the-woodlands.html
@@ -16,6 +16,51 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This staff has 6 charges and can be wielded as a magic Quarterstaff that grants a +2 bonus to attack rolls and damage rolls made with it. While holding it, you have a +2 bonus to spell attack rolls. Spells. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell. Tree Form. You can take a Magic action to plant one end of the staff in earth in an unoccupied space and expend 1 charge to transform the staff into a healthy tree. The tree is 60 feet tall and has a 5-foot-diameter trunk, and its branches at the top spread out in a 20-foot radius. The tree appears ordinary but radiates a faint aura of Transmutation magic that can be discerned with the Detect Magic spell. While touching the tree and using a Magic action, you return the staff to its normal form. Any creature in the tree falls when the tree reverts to a staff. Regaining Charges. The staff regains 1d6 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff loses its properties and becomes a nonmagical Quarterstaff.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-the-woodlands.md">Markdown Format</a></p>
+<p>This staff has 6 charges and can be wielded as a magic Quarterstaff that grants a +2 bonus to attack rolls and damage rolls made with it. While holding it, you have a +2 bonus to spell attack rolls.</p>
+<p><strong><em>Spells.</em></strong> While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Animal Friendship</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Awaken</td>
+<td>5</td>
+</tr>
+<tr>
+<td>Barkskin</td>
+<td>2</td>
+</tr>
+<tr>
+<td>Locate Animals or Plants</td>
+<td>2</td>
+</tr>
+<tr>
+<td>Pass without Trace</td>
+<td>2</td>
+</tr>
+<tr>
+<td>Speak with Animals</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Speak with Plants</td>
+<td>3</td>
+</tr>
+<tr>
+<td>Wall of Thorns</td>
+<td>6</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Tree Form.</em></strong> You can take a Magic action to plant one end of the staff in earth in an unoccupied space and expend 1 charge to transform the staff into a healthy tree. The tree is 60 feet tall and has a 5-foot-diameter trunk, and its branches at the top spread out in a 20-foot radius. The tree appears ordinary but radiates a faint aura of Transmutation magic that can be discerned with the <em>Detect Magic</em> spell. While touching the tree and using a Magic action, you return the staff to its normal form. Any creature in the tree falls when the tree reverts to a staff.</p>
+<p><strong><em>Regaining Charges.</em></strong> The staff regains 1d6 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff loses its properties and becomes a nonmagical Quarterstaff.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-the-woodlands.md">Markdown Format</a></p>
 </body>
 </html>
