--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/wand-of-binding.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/wand-of-binding.html
@@ -16,6 +16,26 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This wand has 7 charges. Spells. While holding the wand, you can cast one of the spells (save DC 17) on the following table from it. The table indicates how many charges you must expend to cast the spell. Regaining Charges. The wand regains 1d6 + 1 expended charges daily at dawn. If you expend the wand's last charge, roll 1d20. On a 1, the wand crumbles into ashes and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/wand-of-binding.md">Markdown Format</a></p>
+<p>This wand has 7 charges.</p>
+<p><strong><em>Spells.</em></strong> While holding the wand, you can cast one of the spells (save DC 17) on the following table from it. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Hold Monster</td>
+<td>5</td>
+</tr>
+<tr>
+<td>Hold Person</td>
+<td>2</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Regaining Charges.</em></strong> The wand regains 1d6 + 1 expended charges daily at dawn. If you expend the wand's last charge, roll 1d20. On a 1, the wand crumbles into ashes and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/wand-of-binding.md">Markdown Format</a></p>
 </body>
 </html>
