--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/wand-of-wonder.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/wand-of-wonder.html
@@ -16,6 +16,90 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This wand has 7 charges. While holding it, you can take a Magic action to expend 1 charge while choosing a point within 120 feet of yourself. That location becomes the point of origin of a spell or other magical effect determined by rolling on the Wand of Wonder Effects table. Spells cast from the wand have a save DC of 15. If a spell's maximum range is normally less than 120 feet, it becomes 120 feet when cast from the wand. If an effect has multiple possible subjects, the GM determines randomly which among them are affected. Regaining Charges. The wand regains 1d6 + 1 expended charges daily at dawn. If you expend the wand's last charge, roll 1d20. On a 1, the wand crumbles into dust and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/wand-of-wonder.md">Markdown Format</a></p>
+<p>This wand has 7 charges. While holding it, you can take a Magic action to expend 1 charge while choosing a point within 120 feet of yourself. That location becomes the point of origin of a spell or other magical effect determined by rolling on the Wand of Wonder Effects table. Spells cast from the wand have a save DC of 15. If a spell's maximum range is normally less than 120 feet, it becomes 120 feet when cast from the wand. If an effect has multiple possible subjects, the GM determines randomly which among them are affected.</p>
+<p><strong><em>Regaining Charges.</em></strong> The wand regains 1d6 + 1 expended charges daily at dawn. If you expend the wand's last charge, roll 1d20. On a 1, the wand crumbles into dust and is destroyed.</p>
+<p>Table: Wand of Wonder Effects</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Effect</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–20</td>
+<td>You cast a spell originating from the chosen point. Roll 1d10 to determine the spell: on a <strong>1–2,</strong> <em>Darkness</em>; on a <strong>3–4,</strong> <em>Faerie Fire</em>; on a <strong>5–6,</strong> <em>Fireball</em>; on a <strong>7–8,</strong> <em>Slow</em>; on a <strong>9–10,</strong> <em>Stinking Cloud</em>.</td>
+</tr>
+<tr>
+<td>21–25</td>
+<td>Nothing happens at the chosen point of origin. Instead, you have the Stunned condition until the start of your next turn, believing something awesome just happened.</td>
+</tr>
+<tr>
+<td>26–30</td>
+<td>You cast <em>Gust of Wind</em>. The Line created by the spell extends from you to the chosen point of origin.</td>
+</tr>
+<tr>
+<td>31–35</td>
+<td>Nothing happens at the chosen point of origin. Instead, you take 1d6 Psychic damage.</td>
+</tr>
+<tr>
+<td>36–40</td>
+<td>Heavy rain falls for 1 minute in a 120-foothigh, 60-foot-radius Cylinder centered on the chosen point of origin. During that time, the area of effect is Lightly Obscured.</td>
+</tr>
+<tr>
+<td>41–45</td>
+<td>A cloud of 600 oversized butterflies fills a 60-foot-high, 30-foot-radius Cylinder centered on the chosen point of origin. The butterflies remain for 10 minutes, during which time the area of effect is Heavily Obscured.</td>
+</tr>
+<tr>
+<td>46–50</td>
+<td>You cast <em>Lightning Bolt</em>. The Line created by the spell extends from you to the chosen point of origin.</td>
+</tr>
+<tr>
+<td>51–55</td>
+<td>The creature closest to the chosen point of origin is enlarged as if you had cast <em>Enlarge/ Reduce</em> on it. If the target isn't you and can't be affected by that spell, you become the target instead.</td>
+</tr>
+<tr>
+<td>56–60</td>
+<td>A magically formed creature appears in an unoccupied space as close to the chosen point of origin as possible. The creature isn't under your control, acts as it normally would, and disappears after 1 hour or when it drops to 0 Hit Points. Roll 1d4 to determine which creature appears. On a <strong>1,</strong> a <strong>Rhinoceros</strong> appears; on a <strong>2,</strong> an <strong>Elephant</strong> appears; and on a <strong>3–4,</strong> a <strong>Rat</strong> appears.</td>
+</tr>
+<tr>
+<td>61–64</td>
+<td>Grass covers a 60-foot-radius circle of ground, with the center of that circle as close to the chosen point of origin as possible. Grass that's already there grows to ten times its normal size and remains overgrown for 1 minute.</td>
+</tr>
+<tr>
+<td>65–68</td>
+<td>An object of the GM's choice disappears into the Ethereal Plane. The object must be neither worn nor carried, within 120 feet of the chosen point of origin, and no larger than 10 feet in any dimension. If there are no such objects in range, nothing happens.</td>
+</tr>
+<tr>
+<td>69–72</td>
+<td>Nothing happens at the chosen point of origin. Instead, you shrink as if you had cast <em>Enlarge/ Reduce</em> on yourself and remain in that state for 1 minute.</td>
+</tr>
+<tr>
+<td>73–77</td>
+<td>Leaves grow from the creature nearest to the chosen point of origin. Unless they are picked off, the leaves turn brown and fall off after 24 hours.</td>
+</tr>
+<tr>
+<td>78–82</td>
+<td>Nothing happens at the chosen point of origin. Instead, a burst of colorful, shimmering light extends from you in a 30-foot Emanation. Each creature in the area must succeed on a DC 15 Constitution saving throw or have the Blinded condition for 1 minute. A creature repeats the save at the end of each of its turns, ending the effect on itself on a success.</td>
+</tr>
+<tr>
+<td>83–87</td>
+<td>Nothing happens at the chosen point of origin. Instead, you cast <em>Invisibility</em> on yourself.</td>
+</tr>
+<tr>
+<td>88–92</td>
+<td>Nothing happens at the chosen point of origin. Instead, a stream of 1d4 × 10 gems, each worth 1 GP, shoots from the wand's tip in a Line 30 feet long and 5 feet wide toward the chosen point of origin. Each gem deals 1 Bludgeoning damage, and the total damage of the gems is divided equally among all creatures in the Line.</td>
+</tr>
+<tr>
+<td>93–97</td>
+<td>You cast <em>Polymorph</em>, targeting the creature closest to the chosen point of origin. Roll 1d4 to determine the target's new form. On a <strong>1,</strong> the new form is a <strong>Black Bear;</strong> on a <strong>2,</strong> the new form is a <strong>Giant Wasp;</strong> on a <strong>3–4,</strong> the new form is a <strong>Frog.</strong></td>
+</tr>
+<tr>
+<td>98–00</td>
+<td>The creature closest to the chosen point of origin makes a DC 15 Constitution saving throw. On a failed save, the creature has the Restrained condition and begins to turn to stone. While Restrained in this way, the creature repeats the save at the end of its next turn. On a successful save, the effect ends. On a failed save, the creature has the Petrified condition instead of the Restrained condition. The petrification lasts until the creature is freed by the <em>Greater Restoration</em> spell or similar magic.</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/wand-of-wonder.md">Markdown Format</a></p>
 </body>
 </html>
