--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ammunition-of-slaying.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ammunition-of-slaying.html
@@ -16,6 +16,73 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This magic ammunition is meant to slay creatures of a particular type, which the GM chooses or determines randomly by rolling on the table below. If a creature of that type takes damage from the ammunition, the creature makes a DC 17 Constitution saving throw, taking an extra 6d10 Force damage on a failed save or half as much extra damage on a successful one. After dealing its extra damage to a creature, the ammunition becomes nonmagical.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ammunition-of-slaying.md">Markdown Format</a></p>
+<p>This magic ammunition is meant to slay creatures of a particular type, which the GM chooses or determines randomly by rolling on the table below. If a creature of that type takes damage from the ammunition, the creature makes a DC 17 Constitution saving throw, taking an extra 6d10 Force damage on a failed save or half as much extra damage on a successful one.</p>
+<p>After dealing its extra damage to a creature, the ammunition becomes nonmagical.</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Creature Type</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–10</td>
+<td>Aberrations</td>
+</tr>
+<tr>
+<td>11–15</td>
+<td>Beasts</td>
+</tr>
+<tr>
+<td>16–20</td>
+<td>Celestials</td>
+</tr>
+<tr>
+<td>21–25</td>
+<td>Constructs</td>
+</tr>
+<tr>
+<td>26–35</td>
+<td>Dragons</td>
+</tr>
+<tr>
+<td>36–45</td>
+<td>Elementals</td>
+</tr>
+<tr>
+<td>46–50</td>
+<td>Humanoids</td>
+</tr>
+<tr>
+<td>51–60</td>
+<td>Fey</td>
+</tr>
+<tr>
+<td>61–70</td>
+<td>Fiends</td>
+</tr>
+<tr>
+<td>71–75</td>
+<td>Giants</td>
+</tr>
+<tr>
+<td>76–80</td>
+<td>Monstrosities</td>
+</tr>
+<tr>
+<td>81–85</td>
+<td>Oozes</td>
+</tr>
+<tr>
+<td>86–90</td>
+<td>Plants</td>
+</tr>
+<tr>
+<td>91–00</td>
+<td>Undead</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ammunition-of-slaying.md">Markdown Format</a></p>
 </body>
 </html>
