--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/apparatus-of-the-crab.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/apparatus-of-the-crab.html
@@ -16,6 +16,72 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This item first appears to be a sealed iron barrel weighing 500 pounds. The barrel has a hidden catch, which can be found with a successful DC 20 Intelligence (Investigation) check. Releasing the catch unlocks a hatch at one end of the barrel, allowing two Medium or smaller creatures to crawl inside. Ten levers are set in a row at the far end, each in a neutral position, able to move up or down. When certain levers are used, the apparatus transforms to resemble a giant lobster. The Apparatus of the Crab is a Large object with the following statistics: AC 20; HP 200; Speed 30 ft., Swim 30 ft. (or 0 ft. for both if the legs aren't extended); Immunity to Poison and Psychic damage. To be used as a vehicle, the apparatus requires one pilot. While the apparatus's hatch is closed, the compartment is airtight and watertight. The compartment holds enough air for 10 hours of breathing, divided by the number of breathing creatures inside. The apparatus floats on water. It can also go underwater to a depth of 900 feet. Below that, the vehicle takes 2d6 Bludgeoning damage each minute from pressure. A creature in the compartment can take a Utilize action to move as many as two of the apparatus's levers up or down. After each use, a lever goes back to its neutral position. Each lever, from left to right, functions as shown in the Apparatus of the Crab Levers table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/apparatus-of-the-crab.md">Markdown Format</a></p>
+<p>This item first appears to be a sealed iron barrel weighing 500 pounds. The barrel has a hidden catch, which can be found with a successful DC 20 Intelligence (Investigation) check. Releasing the catch unlocks a hatch at one end of the barrel, allowing two Medium or smaller creatures to crawl inside. Ten levers are set in a row at the far end, each in a neutral position, able to move up or down. When certain levers are used, the apparatus transforms to resemble a giant lobster.</p>
+<p>The <em>Apparatus of the Crab</em> is a Large object with the following statistics: AC 20; HP 200; Speed 30 ft., Swim 30 ft. (or 0 ft. for both if the legs aren't extended); Immunity to Poison and Psychic damage.</p>
+<p>To be used as a vehicle, the apparatus requires one pilot. While the apparatus's hatch is closed, the compartment is airtight and watertight. The compartment holds enough air for 10 hours of breathing, divided by the number of breathing creatures inside.</p>
+<p>The apparatus floats on water. It can also go underwater to a depth of 900 feet. Below that, the vehicle takes 2d6 Bludgeoning damage each minute from pressure.</p>
+<p>A creature in the compartment can take a Utilize action to move as many as two of the apparatus's levers up or down. After each use, a lever goes back to its neutral position. Each lever, from left to right, functions as shown in the Apparatus of the Crab Levers table.</p>
+<p>Table: Apparatus of the Crab Levers</p>
+<table>
+<thead>
+<tr>
+<th>Lever</th>
+<th>Up</th>
+<th>Down</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Legs extend, allowing the apparatus to walk and swim.</td>
+<td>Legs retract, reducing the apparatus's Speed and Swim Speed to 0 and making it unable to benefit from bonuses to speed.</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Forward window shutter opens.</td>
+<td>Forward window shutter closes.</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Side window shutters open (two per side).</td>
+<td>Side window shutters close (two per side).</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Two claws extend from the front side of the apparatus.</td>
+<td>The claws retract.</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Each extended claw makes the following melee attack: +8 to hit, reach 5 ft. <em>Hit:</em> 7 (2d6) Bludgeoning damage.</td>
+<td>Each extended claw makes the following melee attack: +8 to hit, reach 5 ft. <em>Hit:</em> The target has the Grappled condition (escape DC 15).</td>
+</tr>
+<tr>
+<td>6</td>
+<td>The apparatus walks or swims forward provided its legs are extended.</td>
+<td>The apparatus walks or swims backward provided its legs are extended.</td>
+</tr>
+<tr>
+<td>7</td>
+<td>The apparatus turns 90 degrees counterclockwise provided its legs are extended.</td>
+<td>The apparatus turns 90 degrees clockwise provided its legs are extended.</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Eyelike fixtures emit Bright Light in a 30-foot radius and Dim Light for an additional 30 feet.</td>
+<td>The light turns off.</td>
+</tr>
+<tr>
+<td>9</td>
+<td>The apparatus sinks up to 20 feet if it's in liquid.</td>
+<td>The apparatus rises up to 20 feet if it's in liquid.</td>
+</tr>
+<tr>
+<td>10</td>
+<td>The rear hatch unseals and opens.</td>
+<td>The rear hatch closes and seals.</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/apparatus-of-the-crab.md">Markdown Format</a></p>
 </body>
 </html>
