--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/bag-of-tricks.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/bag-of-tricks.html
@@ -16,6 +16,74 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This bag made from gray, rust, or tan cloth appears empty. Reaching inside the bag, however, reveals the presence of a small, fuzzy object. You can take a Magic action to pull the fuzzy object from the bag and throw it up to 20 feet. When the object lands, it transforms into a creature you determine by rolling on the table that corresponds to the bag's color. See "Monsters" for the creature's stat block. The creature vanishes at the next dawn or when it is reduced to 0 Hit Points. The creature is Friendly to you and your allies, and it acts immediately after you on your Initiative count. You can take a Bonus Action to command how the creature moves and what action it takes on its next turn, such as attacking an enemy. In the absence of such orders, the creature acts in a fashion appropriate to its nature. Once three fuzzy objects have been pulled from the bag, the bag can't be used again until the next dawn.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/bag-of-tricks.md">Markdown Format</a></p>
+<p>This bag made from gray, rust, or tan cloth appears empty. Reaching inside the bag, however, reveals the presence of a small, fuzzy object.</p>
+<p>You can take a Magic action to pull the fuzzy object from the bag and throw it up to 20 feet. When the object lands, it transforms into a creature you determine by rolling on the table that corresponds to the bag's color. See "Monsters" for the creature's stat block. The creature vanishes at the next dawn or when it is reduced to 0 Hit Points.</p>
+<p>The creature is Friendly to you and your allies, and it acts immediately after you on your Initiative count. You can take a Bonus Action to command how the creature moves and what action it takes on its next turn, such as attacking an enemy. In the absence of such orders, the creature acts in a fashion appropriate to its nature.</p>
+<p>Once three fuzzy objects have been pulled from the bag, the bag can't be used again until the next dawn.</p>
+<p>Table: Gray Bag of Tricks</p>
+<table>
+<thead>
+<tr>
+<th>1d8</th>
+<th>Creature</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Weasel</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Giant Rat</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Badger</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Boar</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Panther</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Giant Badger</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Dire Wolf</td>
+</tr>
+<tr>
+<td>8</td>
+<td>Giant Elk</td>
+</tr>
+</tbody>
+</table>
+<p>Table: Rust Bag of Tricks
+| 1d8 | Creature   |
+|-----|------------|
+| 1   | Rat        |
+| 2   | Owl        |
+| 3   | Mastiff    |
+| 4   | Goat       |
+| 5   | Giant Goat |
+| 6   | Giant Boar |
+| 7   | Lion       |
+| 8   | Brown Bear |</p>
+<p>Table: Tan Bag of Tricks
+| 1d8 | Creature     |
+|-----|--------------|
+| 1   | Jackal       |
+| 2   | Ape          |
+| 3   | Baboon       |
+| 4   | Axe Beak     |
+| 5   | Black Bear   |
+| 6   | Giant Weasel |
+| 7   | Giant Hyena  |
+| 8   | Tiger        |</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/bag-of-tricks.md">Markdown Format</a></p>
 </body>
 </html>
