--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/carpet-of-flying.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/carpet-of-flying.html
@@ -16,6 +16,43 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You can make this carpet hover and fly by taking a Magic action and using the carpet's command word. It moves according to your directions if you are within 30 feet of it. Four sizes of Carpet of Flying exist. The GM chooses the size of a given carpet or determines it randomly by rolling on the following table. A carpet can carry up to twice the weight shown on the table, but its Fly Speed is halved if it carries more than its normal capacity.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/carpet-of-flying.md">Markdown Format</a></p>
+<p>You can make this carpet hover and fly by taking a Magic action and using the carpet's command word. It moves according to your directions if you are within 30 feet of it.</p>
+<p>Four sizes of <em>Carpet of Flying</em> exist. The GM chooses the size of a given carpet or determines it randomly by rolling on the following table. A carpet can carry up to twice the weight shown on the table, but its Fly Speed is halved if it carries more than its normal capacity.</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Size</th>
+<th>Capacity</th>
+<th>Fly Speed</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–20</td>
+<td>3 ft. × 5 ft.</td>
+<td>200 lb.</td>
+<td>80 feet</td>
+</tr>
+<tr>
+<td>21–55</td>
+<td>4 ft. × 6 ft.</td>
+<td>400 lb.</td>
+<td>60 feet</td>
+</tr>
+<tr>
+<td>56–80</td>
+<td>5 ft. × 7 ft.</td>
+<td>600 lb.</td>
+<td>40 feet</td>
+</tr>
+<tr>
+<td>81–00</td>
+<td>6 ft. × 9 ft.</td>
+<td>800 lb.</td>
+<td>30 feet</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/carpet-of-flying.md">Markdown Format</a></p>
 </body>
 </html>
