--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/deck-of-illusions.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/deck-of-illusions.html
@@ -16,6 +16,152 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This box contains a set of cards. A full deck has 34 cards: 32 depicting specific creatures and two with a mirrored surface. A deck found as treasure is usually missing 1d20 − 1 cards. The magic of the deck functions only if its cards are drawn at random. You can take a Magic action to draw a card at random from the deck and throw it to the ground at a point within 30 feet of yourself. An illusion of a creature, determined by rolling on the Deck of Illusions table, forms over the thrown card and remains until dispelled. The illusory creature created by the card looks and behaves like a real creature of its kind, except that it can do no harm. While you are within 120 feet of the illusory creature and can see it, you can take a Magic action to move it anywhere within 30 feet of its card. Any physical interaction with the illusory creature reveals it to be false, because objects pass through it. A creature that takes a Study action to visually inspect the illusory creature identifies it as an illusion with a successful DC 15 Intelligence (Investigation) check. The illusion lasts until its card is moved or the illusion is dispelled (using a Dispel Magic spell or a similar effect). When the illusion ends, the image on its card disappears, and that card can't be used again. *Stat blocks for these creatures (except the card drawer) appear in "Monsters."</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/deck-of-illusions.md">Markdown Format</a></p>
+<p>This box contains a set of cards. A full deck has 34 cards: 32 depicting specific creatures and two with a mirrored surface. A deck found as treasure is usually missing 1d20 − 1 cards.</p>
+<p>The magic of the deck functions only if its cards are drawn at random. You can take a Magic action to draw a card at random from the deck and throw it to the ground at a point within 30 feet of yourself. An illusion of a creature, determined by rolling on the Deck of Illusions table, forms over the thrown card and remains until dispelled. The illusory creature created by the card looks and behaves like a real creature of its kind, except that it can do no harm. While you are within 120 feet of the illusory creature and can see it, you can take a Magic action to move it anywhere within 30 feet of its card.</p>
+<p>Any physical interaction with the illusory creature reveals it to be false, because objects pass through it. A creature that takes a Study action to visually inspect the illusory creature identifies it as an illusion with a successful DC 15 Intelligence (Investigation) check. The illusion lasts until its card is moved or the illusion is dispelled (using a <em>Dispel Magic</em> spell or a similar effect). When the illusion ends, the image on its card disappears, and that card can't be used again.</p>
+<p>Table: Deck of Illusions</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Illusion*</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–03</td>
+<td>Adult Red Dragon</td>
+</tr>
+<tr>
+<td>04–06</td>
+<td>Archmage</td>
+</tr>
+<tr>
+<td>07–09</td>
+<td>Assassin</td>
+</tr>
+<tr>
+<td>10–12</td>
+<td>Bandit Captain</td>
+</tr>
+<tr>
+<td>13–15</td>
+<td>Basilisk</td>
+</tr>
+<tr>
+<td>16–18</td>
+<td>Berserker</td>
+</tr>
+<tr>
+<td>19–21</td>
+<td>Bugbear Warrior</td>
+</tr>
+<tr>
+<td>22–24</td>
+<td>Cloud Giant</td>
+</tr>
+<tr>
+<td>25–27</td>
+<td>Druid</td>
+</tr>
+<tr>
+<td>28–30</td>
+<td>Erinyes</td>
+</tr>
+<tr>
+<td>31–33</td>
+<td>Ettin</td>
+</tr>
+<tr>
+<td>34–36</td>
+<td>Fire Giant</td>
+</tr>
+<tr>
+<td>37–39</td>
+<td>Frost Giant</td>
+</tr>
+<tr>
+<td>40–42</td>
+<td>Gnoll Warrior</td>
+</tr>
+<tr>
+<td>43–45</td>
+<td>Goblin Warrior</td>
+</tr>
+<tr>
+<td>46–48</td>
+<td>Guardian Naga</td>
+</tr>
+<tr>
+<td>49–51</td>
+<td>Hill Giant</td>
+</tr>
+<tr>
+<td>52–54</td>
+<td>Hobgoblin Warrior</td>
+</tr>
+<tr>
+<td>55–57</td>
+<td>Incubus</td>
+</tr>
+<tr>
+<td>58–60</td>
+<td>Iron Golem</td>
+</tr>
+<tr>
+<td>61–63</td>
+<td>Knight</td>
+</tr>
+<tr>
+<td>64–66</td>
+<td>Kobold Warrior</td>
+</tr>
+<tr>
+<td>67–69</td>
+<td>Lich</td>
+</tr>
+<tr>
+<td>70–72</td>
+<td>Medusa</td>
+</tr>
+<tr>
+<td>73–75</td>
+<td>Night Hag</td>
+</tr>
+<tr>
+<td>76–78</td>
+<td>Ogre</td>
+</tr>
+<tr>
+<td>79–81</td>
+<td>Oni</td>
+</tr>
+<tr>
+<td>82–84</td>
+<td>Priest</td>
+</tr>
+<tr>
+<td>85–87</td>
+<td>Succubus</td>
+</tr>
+<tr>
+<td>88–90</td>
+<td>Troll</td>
+</tr>
+<tr>
+<td>91–93</td>
+<td>Veteran Warrior</td>
+</tr>
+<tr>
+<td>94–96</td>
+<td>Wyvern</td>
+</tr>
+<tr>
+<td>97–00</td>
+<td>The card drawer</td>
+</tr>
+</tbody>
+</table>
+<p>*Stat blocks for these creatures (except the card drawer) appear in "Monsters."</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/deck-of-illusions.md">Markdown Format</a></p>
 </body>
 </html>
