--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/efreeti-bottle.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/efreeti-bottle.html
@@ -16,6 +16,29 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>When you take a Magic action to remove the stopper of this painted brass bottle, a cloud of thick smoke flows out of it. At the end of your turn, the smoke disappears with a flash of harmless fire, and an Efreeti appears in an unoccupied space within 30 feet of you. The first time the bottle is opened, the GM rolls on the following table to determine what happens.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/efreeti-bottle.md">Markdown Format</a></p>
+<p>When you take a Magic action to remove the stopper of this painted brass bottle, a cloud of thick smoke flows out of it. At the end of your turn, the smoke disappears with a flash of harmless fire, and an <strong>Efreeti</strong> appears in an unoccupied space within 30 feet of you.</p>
+<p>The first time the bottle is opened, the GM rolls on the following table to determine what happens.</p>
+<table>
+<thead>
+<tr>
+<th>1d10</th>
+<th>Effect</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>The efreeti attacks you. After fighting for 5 rounds, the efreeti disappears, and the bottle loses its magic.</td>
+</tr>
+<tr>
+<td>2–9</td>
+<td>The efreeti understands your languages and obeys your commands for 1 hour, after which it returns to the bottle, and a new stopper contains it. The stopper can't be removed for 24 hours. The next two times the bottle is opened, the same effect occurs. If the bottle is opened a fourth time, the efreeti escapes and disappears, and the bottle loses its magic.</td>
+</tr>
+<tr>
+<td>10</td>
+<td>The efreeti understands your languages and can cast <em>Wish</em> once for you. It disappears when it grants the wish or after 1 hour, and the bottle loses its magic.</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/efreeti-bottle.md">Markdown Format</a></p>
 </body>
 </html>
