--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/horn-of-valhalla.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/horn-of-valhalla.html
@@ -16,6 +16,44 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You can take a Magic action to blow this horn. In response, warrior spirits from the plane of Ysgard appear in unoccupied spaces within 60 feet of you. Each spirit uses the Berserker stat block and returns to Ysgard after 1 hour or when it drops to 0 Hit Points. The spirits look like living, breathing warriors, and they have Immunity to the Charmed and Frightened conditions. Once you use the horn, it can't be used again until 7 days have passed. Four types of Horn of Valhalla are known to exist, each made of a different metal. The horn's type determines how many spirits it summons, as well as the requirement for its use. The GM chooses the horn's type or determines it randomly by rolling on the following table. If you blow the horn without meeting its requirement, the summoned spirits attack you. If you meet the requirement, they are Friendly to you and your allies and follow your commands.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/horn-of-valhalla.md">Markdown Format</a></p>
+<p>You can take a Magic action to blow this horn. In response, warrior spirits from the plane of Ysgard appear in unoccupied spaces within 60 feet of you. Each spirit uses the <strong>Berserker</strong> stat block and returns to Ysgard after 1 hour or when it drops to 0 Hit Points. The spirits look like living, breathing warriors, and they have Immunity to the Charmed and Frightened conditions. Once you use the horn, it can't be used again until 7 days have passed.</p>
+<p>Four types of <em>Horn of Valhalla</em> are known to exist, each made of a different metal. The horn's type determines how many spirits it summons, as well as the requirement for its use. The GM chooses the horn's type or determines it randomly by rolling on the following table.</p>
+<p>If you blow the horn without meeting its requirement, the summoned spirits attack you. If you meet the requirement, they are Friendly to you and your allies and follow your commands.</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Horn Type</th>
+<th>Spirits</th>
+<th>Requirement</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–40</td>
+<td>Silver</td>
+<td>2</td>
+<td>None</td>
+</tr>
+<tr>
+<td>41–75</td>
+<td>Brass</td>
+<td>3</td>
+<td>Proficiency with all Simple weapons</td>
+</tr>
+<tr>
+<td>76–90</td>
+<td>Bronze</td>
+<td>4</td>
+<td>Training with all Medium armor</td>
+</tr>
+<tr>
+<td>91–00</td>
+<td>Iron</td>
+<td>5</td>
+<td>Proficiency with all Martial weapons</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/horn-of-valhalla.md">Markdown Format</a></p>
 </body>
 </html>
