--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/mysterious-deck.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/mysterious-deck.html
@@ -16,6 +16,218 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>Usually found in a box or pouch, this deck contains a number of cards made of ivory or vellum. Most (75 percent) of these decks have thirteen cards, but some have twenty-two. Use the appropriate column of the Mysterious Deck table when randomly determining cards drawn from the deck. Before you draw a card, you must declare how many cards you intend to draw and then draw them randomly. Any cards drawn in excess of this number have no effect. Otherwise, as soon as you draw a card from the deck, its magic takes effect. You must draw each card no more than 1 hour after the previous draw. If you fail to draw the chosen number, the remaining number of cards fly from the deck on their own and take effect all at once. Once a card is drawn, it disappears. Unless the card is the Fool or Jester, the card reappears in the deck, making it possible to draw the same card twice. (Once the Fool or Jester has left the deck, reroll on the table if that card comes up again.) Each card's effect is described below. Balance. You can increase one of your ability scores by 2, to a maximum of 22, provided you also decrease another one of your ability scores by 2. You can't decrease an ability that has a score of 5 or lower. Alternatively, you can choose not to adjust your ability scores, in which case this card has no effect. Comet. The next time you enter combat against one or more Hostile creatures, you can select one of them as your foe when you roll Initiative. If you reduce your foe to 0 Hit Points during that combat, you have Advantage on Death Saving Throws for 1 year. If someone else reduces your chosen foe to 0 Hit Points or you don't choose a foe, this card has no effect. Donjon. You disappear and become entombed in a state of suspended animation in an extradimensional sphere. Everything you're wearing and carrying disappears with you except for Artifacts, which stay behind in the space you occupied when you disappeared. You remain imprisoned until you are found and removed from the sphere. You can't be located by any Divination magic, but a Wish spell can reveal the location of your prison. You draw no more cards. Euryale. The card's medusa-like visage curses you. You take a −2 penalty to saving throws while cursed in this way. Only a god or the magic of the Fates card can end this curse. Fates. Reality's fabric unravels and spins anew, allowing you to avoid or erase one event as if it never happened. You can use the card's magic as soon as you draw the card or at any other time before you die. Flames. A powerful devil becomes your enemy. The devil seeks your ruin and torments you, savoring your suffering before attempting to slay you. This enmity lasts until either you or the devil dies. Fool. You have Disadvantage on D20 Tests for the next 72 hours. Draw another card; this draw doesn't count as one of your declared draws. Gem. Twenty-five pieces of jewelry worth 2,000 GP each or fifty gems worth 1,000 GP each appear at your feet. Jester. You have Advantage on D20 Tests for the next 72 hours, or you can draw two additional cards beyond your declared draws. Key. A Rare or rarer magic weapon with which you are proficient appears on your person. The GM chooses the weapon. Knight. You gain the service of a Knight, who magically appears in an unoccupied space you choose within 30 feet of yourself. The knight has the same alignment as you and serves you loyally until death, believing the two of you have been drawn together by fate. Work with your GM to create a name and backstory for this NPC. The GM can use a different stat block to represent the knight, as desired. Moon. You gain the ability to cast Wish 1d3 times. Puzzle. Permanently reduce your Intelligence or Wisdom by 1d4 + 1 (to a minimum score of 1). You can draw one additional card beyond your declared draws. Rogue. An NPC of the GM's choice becomes Hostile toward you. You don't know the identity of this NPC until they or someone else reveals it. Nothing less than a Wish spell or divine intervention can end the NPC's hostility toward you. Ruin. All forms of wealth that you carry or own, other than magic items, are lost to you. Portable property vanishes. Businesses, buildings, and land you own are lost in a way that alters reality the least. Any documentation that proves you should own something lost to this card also disappears. Sage. At any time you choose within one year of drawing this card, you can ask a question in meditation and mentally receive a truthful answer to that question. Skull. An Avatar of Death (see the accompanying stat block) appears in an unoccupied space as close to you as possible. The avatar targets only you with its attacks, appearing as a ghostly skeleton clad in a tattered black robe and carrying a spectral scythe. The avatar disappears when it drops to 0 Hit Points or you die. If an ally of yours deals damage to the avatar, that ally summons another Avatar of Death. The new avatar appears in an unoccupied space as close to that ally as possible and targets only that ally with its attacks. You and your allies can each summon only one avatar as a consequence of this draw. A creature slain by an avatar can't be restored to life. Star. Increase one of your ability scores by 2, to a maximum of 24. Sun. A magic item (chosen by the GM) appears on your person. In addition, you gain 10 Temporary Hit Points daily at dawn until you die. Talons. Every magic item you wear or carry disintegrates. Artifacts in your possession vanish instead. Throne. You gain proficiency and Expertise in your choice of History, Insight, Intimidation, or Persuasion. In addition, you gain rightful ownership of a small keep somewhere in the world. However, the keep is currently home to one or more monsters, which must be cleared out before you can claim the keep as yours. Void. Your soul is drawn from your body and contained in an object in a place of the GM's choice. One or more powerful beings guard the place. While your soul is trapped in this way, your body is inert, ceases aging, and requires no food, air, or water. A Wish spell can't return your soul to your body, but the spell reveals the location of the object that holds your soul. You draw no more cards. &gt; ### Avatar of Death &gt; &gt; Medium Undead, Neutral evil &gt; &gt; AC 20 &gt; &gt; Initiative +3 (13) &gt; &gt; HP Half the HP maximum of its summoner &gt; &gt; Speed 60 ft., Fly 60 ft. (hover) &gt; &gt; | Attribute | Score | Mod | Save | &gt; |-----------|-------|-----|------| &gt; | Str | 16 | +3 | +3 | &gt; | Dex | 16 | +3 | +3 | &gt; | Con | 16 | +3 | +3 | &gt; | Int | 16 | +3 | +3 | &gt; | Wis | 16 | +3 | +3 | &gt; | Cha | 16 | +3 | +3 | &gt; &gt; &gt; Immunities Necrotic, Poison; Charmed, Exhaustion, Frightened, Paralyzed, Petrified, Poisoned, Unconscious &gt; &gt; Senses Truesight 60 ft., Passive Perception 13 &gt; &gt; Languages All languages known to its summoner &gt; &gt; CR None (XP 0; PB equals its summoner's) &gt; &gt; #### Traits &gt; &gt; Incorporeal Movement. The avatar can move through other creatures and objects as if they were Difficult Terrain. It takes 5 (1d10) Force damage if it ends its turn inside an object. &gt; &gt; #### Actions &gt; &gt; Multiattack. The avatar makes a number of Reaping Scythe attacks equal to half the summoner's Proficiency Bonus (rounded up). &gt; &gt; Reaping Scythe. Melee Attack Roll: Automatic hit, reach 5 ft. Hit: 7 (1d8 + 3) Slashing damage plus 4 (1d8) Necrotic damage.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/mysterious-deck.md">Markdown Format</a></p>
+<p>Usually found in a box or pouch, this deck contains a number of cards made of ivory or vellum. Most (75 percent) of these decks have thirteen cards, but some have twenty-two. Use the appropriate column of the Mysterious Deck table when randomly determining cards drawn from the deck.</p>
+<p>Before you draw a card, you must declare how many cards you intend to draw and then draw them randomly. Any cards drawn in excess of this number have no effect. Otherwise, as soon as you draw a card from the deck, its magic takes effect. You must draw each card no more than 1 hour after the previous draw. If you fail to draw the chosen number, the remaining number of cards fly from the deck on their own and take effect all at once.</p>
+<p>Once a card is drawn, it disappears. Unless the card is the Fool or Jester, the card reappears in the deck, making it possible to draw the same card twice. (Once the Fool or Jester has left the deck, reroll on the table if that card comes up again.)</p>
+<p>Table: Mysterious Deck</p>
+<table>
+<thead>
+<tr>
+<th>1d100 (13-Card Deck)</th>
+<th>1d100 (22-Card Deck)</th>
+<th>Card</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>—</td>
+<td>01–05</td>
+<td>Balance</td>
+</tr>
+<tr>
+<td>—</td>
+<td>06–10</td>
+<td>Comet</td>
+</tr>
+<tr>
+<td>—</td>
+<td>11–14</td>
+<td>Donjon</td>
+</tr>
+<tr>
+<td>01–08</td>
+<td>15–18</td>
+<td>Euryale</td>
+</tr>
+<tr>
+<td>—</td>
+<td>19–23</td>
+<td>Fates</td>
+</tr>
+<tr>
+<td>09–16</td>
+<td>24–27</td>
+<td>Flames</td>
+</tr>
+<tr>
+<td>—</td>
+<td>28–31</td>
+<td>Fool</td>
+</tr>
+<tr>
+<td>—</td>
+<td>32–36</td>
+<td>Gem</td>
+</tr>
+<tr>
+<td>17–24</td>
+<td>37–41</td>
+<td>Jester</td>
+</tr>
+<tr>
+<td>25–32</td>
+<td>42–46</td>
+<td>Key</td>
+</tr>
+<tr>
+<td>33–40</td>
+<td>47–51</td>
+<td>Knight</td>
+</tr>
+<tr>
+<td>41–48</td>
+<td>52–56</td>
+<td>Moon</td>
+</tr>
+<tr>
+<td>—</td>
+<td>57–60</td>
+<td>Puzzle</td>
+</tr>
+<tr>
+<td>49–56</td>
+<td>61–64</td>
+<td>Rogue</td>
+</tr>
+<tr>
+<td>57–64</td>
+<td>65–68</td>
+<td>Ruin</td>
+</tr>
+<tr>
+<td>—</td>
+<td>69–73</td>
+<td>Sage</td>
+</tr>
+<tr>
+<td>65–72</td>
+<td>74–77</td>
+<td>Skull</td>
+</tr>
+<tr>
+<td>73–80</td>
+<td>78–82</td>
+<td>Star</td>
+</tr>
+<tr>
+<td>81–88</td>
+<td>83–87</td>
+<td>Sun</td>
+</tr>
+<tr>
+<td>—</td>
+<td>88–91</td>
+<td>Talons</td>
+</tr>
+<tr>
+<td>89–96</td>
+<td>92–96</td>
+<td>Throne</td>
+</tr>
+<tr>
+<td>97–00</td>
+<td>97–00</td>
+<td>Void</td>
+</tr>
+</tbody>
+</table>
+<p>Each card's effect is described below.</p>
+<p><strong><em>Balance.</em></strong> You can increase one of your ability scores by 2, to a maximum of 22, provided you also decrease another one of your ability scores by 2. You can't decrease an ability that has a score of 5 or lower. Alternatively, you can choose not to adjust your ability scores, in which case this card has no effect.</p>
+<p><strong><em>Comet.</em></strong> The next time you enter combat against one or more Hostile creatures, you can select one of them as your foe when you roll Initiative. If you reduce your foe to 0 Hit Points during that combat, you have Advantage on Death Saving Throws for 1 year. If someone else reduces your chosen foe to 0 Hit Points or you don't choose a foe, this card has no effect.</p>
+<p><strong><em>Euryale.</em></strong> The card's medusa-like visage curses you. You take a −2 penalty to saving throws while cursed in this way. Only a god or the magic of the Fates card can end this curse.</p>
+<p><strong><em>Fates.</em></strong> Reality's fabric unravels and spins anew, allowing you to avoid or erase one event as if it never happened. You can use the card's magic as soon as you draw the card or at any other time before you die.</p>
+<p><strong><em>Flames.</em></strong> A powerful devil becomes your enemy. The devil seeks your ruin and torments you, savoring your suffering before attempting to slay you. This enmity lasts until either you or the devil dies.</p>
+<p><strong><em>Fool.</em></strong> You have Disadvantage on D20 Tests for the next 72 hours. Draw another card; this draw doesn't count as one of your declared draws.</p>
+<p><strong><em>Gem.</em></strong> Twenty-five pieces of jewelry worth 2,000 GP each or fifty gems worth 1,000 GP each appear at your feet.</p>
+<p><strong><em>Jester.</em></strong> You have Advantage on D20 Tests for the next 72 hours, or you can draw two additional cards beyond your declared draws.</p>
+<p><strong><em>Key.</em></strong> A Rare or rarer magic weapon with which you are proficient appears on your person. The GM chooses the weapon.</p>
+<p><strong><em>Knight.</em></strong> You gain the service of a <strong>Knight</strong>, who magically appears in an unoccupied space you choose within 30 feet of yourself. The knight has the same alignment as you and serves you loyally until death, believing the two of you have been drawn together by fate. Work with your GM to create a name and backstory for this NPC. The GM can use a different stat block to represent the knight, as desired.</p>
+<p><strong><em>Moon.</em></strong> You gain the ability to cast <em>Wish</em> 1d3 times.</p>
+<p><strong><em>Puzzle.</em></strong> Permanently reduce your Intelligence or Wisdom by 1d4 + 1 (to a minimum score of 1). You can draw one additional card beyond your declared draws.</p>
+<p><strong><em>Rogue.</em></strong> An NPC of the GM's choice becomes Hostile toward you. You don't know the identity of this NPC until they or someone else reveals it. Nothing less than a <em>Wish</em> spell or divine intervention can end the NPC's hostility toward you.</p>
+<p><strong><em>Ruin.</em></strong> All forms of wealth that you carry or own, other than magic items, are lost to you. Portable property vanishes. Businesses, buildings, and land you own are lost in a way that alters reality the least. Any documentation that proves you should own something lost to this card also disappears.</p>
+<p><strong><em>Sage.</em></strong> At any time you choose within one year of drawing this card, you can ask a question in meditation and mentally receive a truthful answer to that question.</p>
+<p><strong><em>Skull.</em></strong> An <strong>Avatar of Death</strong> (see the accompanying stat block) appears in an unoccupied space as close</p>
+<p>to you as possible. The avatar targets only you with its attacks, appearing as a ghostly skeleton clad in a tattered black robe and carrying a spectral scythe. The avatar disappears when it drops to 0 Hit Points or you die. If an ally of yours deals damage to the avatar, that ally summons another <strong>Avatar of Death</strong>. The new avatar appears in an unoccupied space as close to that ally as possible and targets only that ally with its attacks. You and your allies can each summon only one avatar as a consequence of this draw. A creature slain by an avatar can't be restored to life.</p>
+<p><strong><em>Star.</em></strong> Increase one of your ability scores by 2, to a maximum of 24.</p>
+<p><strong><em>Sun.</em></strong> A magic item (chosen by the GM) appears on your person. In addition, you gain 10 Temporary Hit Points daily at dawn until you die.</p>
+<p><strong><em>Talons.</em></strong> Every magic item you wear or carry disintegrates. Artifacts in your possession vanish instead.</p>
+<p><strong><em>Throne.</em></strong> You gain proficiency and Expertise in your choice of History, Insight, Intimidation, or Persuasion. In addition, you gain rightful ownership of a small keep somewhere in the world. However, the keep is currently home to one or more monsters, which must be cleared out before you can claim the keep as yours.</p>
+<p><strong><em>Void.</em></strong> Your soul is drawn from your body and contained in an object in a place of the GM's choice. One or more powerful beings guard the place. While your soul is trapped in this way, your body is inert, ceases aging, and requires no food, air, or water. A <em>Wish</em> spell can't return your soul to your body, but the spell reveals the location of the object that holds your soul. You draw no more cards.</p>
+<blockquote>
+<h4>Avatar of Death</h4>
+<p><em>Medium Undead, Neutral evil</em></p>
+<p><strong>AC</strong> 20 </p>
+<p><strong>Initiative</strong> +3 (13) </p>
+<p><strong>HP</strong> Half the HP maximum of its summoner </p>
+<p><strong>Speed</strong> 60 ft., Fly 60 ft. (hover)</p>
+<table>
+<thead>
+<tr>
+<th>Attribute</th>
+<th>Score</th>
+<th>Mod</th>
+<th>Save</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Str</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>Dex</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>Con</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>Int</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>Wis</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+<tr>
+<td>Cha</td>
+<td>16</td>
+<td>+3</td>
+<td>+3</td>
+</tr>
+</tbody>
+</table>
+<p><strong>Immunities</strong> Necrotic, Poison; Charmed, Exhaustion, Frightened, Paralyzed, Petrified, Poisoned, Unconscious </p>
+<p><strong>Senses</strong> Truesight 60 ft., Passive Perception 13 </p>
+<p><strong>Languages</strong> All languages known to its summoner </p>
+<p><strong>CR</strong> None (XP 0; PB equals its summoner's)</p>
+<h5>Traits</h5>
+<p><strong><em>Incorporeal Movement.</em></strong> The avatar can move through other creatures and objects as if they were Difficult Terrain. It takes 5 (1d10) Force damage if it ends its turn inside an object.</p>
+<h5>Actions</h5>
+<p><strong><em>Multiattack.</em></strong> The avatar makes a number of Reaping Scythe attacks equal to half the summoner's Proficiency Bonus (rounded up).</p>
+<p><strong><em>Reaping Scythe. Melee Attack Roll:</em></strong> Automatic hit, reach 5 ft. <em>Hit:</em> 7 (1d8 + 3) Slashing damage plus 4 (1d8) Necrotic damage.</p>
+</blockquote><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/mysterious-deck.md">Markdown Format</a></p>
 </body>
 </html>
