--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/necklace-of-prayer-beads.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/necklace-of-prayer-beads.html
@@ -16,6 +16,48 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This necklace has 1d4 + 2 magic beads made from aquamarine, black pearl, or topaz. It also has many nonmagical beads made from stones such as amber, bloodstone, citrine, coral, jade, pearl, or quartz. If a magic bead is removed from the necklace, that bead loses its magic. Six types of magic beads exist. The GM decides the type of each bead on the necklace or determines it randomly by rolling on the table below. A necklace can have more than one bead of the same type. To use one, you must be wearing the necklace. Each bead contains a spell that you can cast from it as a Bonus Action (using your spell save DC if a save is necessary). Once a magic bead's spell is cast, that bead can't be used again until the next dawn.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/necklace-of-prayer-beads.md">Markdown Format</a></p>
+<p>This necklace has 1d4 + 2 magic beads made from aquamarine, black pearl, or topaz. It also has many nonmagical beads made from stones such as amber, bloodstone, citrine, coral, jade, pearl, or quartz. If a magic bead is removed from the necklace, that bead loses its magic.</p>
+<p>Six types of magic beads exist. The GM decides the type of each bead on the necklace or determines it randomly by rolling on the table below. A necklace can have more than one bead of the same type. To use one, you must be wearing the necklace. Each bead contains a spell that you can cast from it as a Bonus Action (using your spell save DC if a save is necessary). Once a magic bead's spell is cast, that bead can't be used again until the next dawn.</p>
+<table>
+<thead>
+<tr>
+<th>1d20</th>
+<th>Bead</th>
+<th>Spell</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1–6</td>
+<td>Bead of Blessing</td>
+<td>Bless</td>
+</tr>
+<tr>
+<td>7–12</td>
+<td>Bead of Curing</td>
+<td>Cure Wounds (level 2 version)</td>
+</tr>
+<tr>
+<td>13–16</td>
+<td>Bead of Favor</td>
+<td>Greater Restoration</td>
+</tr>
+<tr>
+<td>17–18</td>
+<td>Bead of Smiting</td>
+<td>Shining Smite</td>
+</tr>
+<tr>
+<td>19</td>
+<td>Bead of Summons</td>
+<td>Guardian of Faith</td>
+</tr>
+<tr>
+<td>20</td>
+<td>Bead of Wind Walking</td>
+<td>Wind Walk</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/necklace-of-prayer-beads.md">Markdown Format</a></p>
 </body>
 </html>
