--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-shooting-stars.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/ring-of-shooting-stars.html
@@ -16,6 +16,36 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You can cast Dancing Lights or Light from the ring. The ring has 6 charges and regains 1d6 expended charges daily at dawn. You can expend its charges to use the properties below. Faerie Fire. You can expend 1 charge to cast Faerie Fire from the ring. Lightning Spheres. You can expend 2 charges as a Magic action to create up to four 3-foot-diameter spheres of lightning. Each sphere appears in an unoccupied space you can see within 120 feet of yourself. The spheres last as long as you maintain Concentration, up to 1 minute. Each sphere sheds Dim Light in a 30-foot radius. As a Bonus Action, you can move each sphere up to 30 feet, but no farther than 120 feet away from yourself. The first time the sphere comes within 5 feet of a creature other than you that isn't behind Total Cover, the sphere discharges lightning at that creature and disappears. That creature makes a DC 15 Dexterity saving throw. On a failed save, the creature takes Lightning damage based on the number of spheres you created, as shown in the following table. On a successful save, the creature takes half as much damage. Shooting Stars. You can expend 1 to 3 charges as a Magic action. For every charge you expend, you launch a glowing mote of light from the ring at a point you can see within 60 feet of yourself. Each creature in a 15-foot Cube originating from that point is showered in sparks and makes a DC 15 Dexterity saving throw, taking 5d4 Radiant damage on a failed save or half as much damage on a successful one.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-shooting-stars.md">Markdown Format</a></p>
+<p>You can cast <em>Dancing Lights</em> or <em>Light</em> from the ring.</p>
+<p>The ring has 6 charges and regains 1d6 expended charges daily at dawn. You can expend its charges to use the properties below.</p>
+<p><strong><em>Faerie Fire.</em></strong> You can expend 1 charge to cast <em>Faerie Fire</em> from the ring.</p>
+<p><strong><em>Lightning Spheres.</em></strong> You can expend 2 charges as a Magic action to create up to four 3-foot-diameter spheres of lightning.</p>
+<p>Each sphere appears in an unoccupied space you can see within 120 feet of yourself. The spheres last as long as you maintain Concentration, up to 1 minute. Each sphere sheds Dim Light in a 30-foot radius.</p>
+<p>As a Bonus Action, you can move each sphere up to 30 feet, but no farther than 120 feet away from yourself. The first time the sphere comes within 5 feet of a creature other than you that isn't behind Total Cover, the sphere discharges lightning at that creature and disappears. That creature makes a DC 15 Dexterity saving throw. On a failed save, the creature takes Lightning damage based on the number of spheres you created, as shown in the following table. On a successful save, the creature takes half as much damage.</p>
+<table>
+<thead>
+<tr>
+<th>Number of Spheres</th>
+<th>Lightning Damage</th>
+<th>Number of Spheres</th>
+<th>Lightning Damage</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>4d12</td>
+<td>3</td>
+<td>2d6</td>
+</tr>
+<tr>
+<td>2</td>
+<td>5d4</td>
+<td>4</td>
+<td>2d4</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Shooting Stars.</em></strong> You can expend 1 to 3 charges as a Magic action. For every charge you expend, you launch a glowing mote of light from the ring at a point you can see within 60 feet of yourself. Each creature in a 15-foot Cube originating from that point is showered in sparks and makes a DC 15 Dexterity saving throw, taking 5d4 Radiant damage on a failed save or half as much damage on a successful one.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/ring-of-shooting-stars.md">Markdown Format</a></p>
 </body>
 </html>
