--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/robe-of-useful-items.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/robe-of-useful-items.html
@@ -16,6 +16,78 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>This robe has cloth patches of various shapes and colors covering it. While wearing the robe, you can take a Magic action to detach one of the patches, causing it to become the object or creature it represents. Once the last patch is removed, the robe becomes an ordinary garment. The robe has two of each of the following patches: - Bullseye Lantern (filled and lit) - Dagger - Mirror - Pole - Rope (coiled) - Sack In addition, the robe has 4d4 other patches. The GM chooses the patches or determines them randomly by rolling on the following table.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/robe-of-useful-items.md">Markdown Format</a></p>
+<p>This robe has cloth patches of various shapes and colors covering it. While wearing the robe, you can take a Magic action to detach one of the patches, causing it to become the object or creature it represents. Once the last patch is removed, the robe becomes an ordinary garment.</p>
+<p>The robe has two of each of the following patches:</p>
+<ul>
+<li>Bullseye Lantern (filled and lit)</li>
+<li>Dagger</li>
+<li>Mirror</li>
+<li>Pole</li>
+<li>Rope (coiled)</li>
+<li>Sack</li>
+</ul>
+<p>In addition, the robe has 4d4 other patches. The GM chooses the patches or determines them randomly by rolling on the following table.</p>
+<table>
+<thead>
+<tr>
+<th>1d100</th>
+<th>Patch</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>01–08</td>
+<td>Bag of 100 GP</td>
+</tr>
+<tr>
+<td>09–15</td>
+<td>Silver coffer (1 foot long, 6 inches wide and deep) worth 500 GP</td>
+</tr>
+<tr>
+<td>16–22</td>
+<td>Iron door (up to 10 feet wide and 10 feet high, barred on one side of your choice), which you can place in an opening you can reach; it con forms to fit the opening, attaching and hinging itself</td>
+</tr>
+<tr>
+<td>23–30</td>
+<td>10 gems worth 100 GP each</td>
+</tr>
+<tr>
+<td>31–44</td>
+<td>Wooden ladder (24 feet long)</td>
+</tr>
+<tr>
+<td>45–51</td>
+<td>Riding Horse with a Riding Saddle</td>
+</tr>
+<tr>
+<td>52–59</td>
+<td>Open pit (a 10-foot Cube), which you can place on the ground within 10 feet of yourself</td>
+</tr>
+<tr>
+<td>60–68</td>
+<td>4 Potions of Healing</td>
+</tr>
+<tr>
+<td>69–75</td>
+<td>Rowboat (12 feet long)</td>
+</tr>
+<tr>
+<td>76–83</td>
+<td>Spell Scroll containing one spell of level 1, 2, or 3 (your choice)</td>
+</tr>
+<tr>
+<td>84–90</td>
+<td>2 Mastiffs</td>
+</tr>
+<tr>
+<td>91–96</td>
+<td>Window (2 feet by 4 feet, up to 2 feet deep), which you can place on a vertical surface you can reach</td>
+</tr>
+<tr>
+<td>97–00</td>
+<td>Portable Ram</td>
+</tr>
+</tbody>
+</table><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/robe-of-useful-items.md">Markdown Format</a></p>
 </body>
 </html>
