--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/shield-1-2-or-3.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/shield-1-2-or-3.html
@@ -16,6 +16,6 @@
 <li><strong>Attunement:</strong> No</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>While holding this Shield, you have a bonus to Armor Class determined by the Shield's rarity, in addition to the Shield's normal bonus to AC.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/shield-1-2-or-3.md">Markdown Format</a></p>
+<p>A shield.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/shield-1-2-or-3.md">Markdown Format</a></p>
 </body>
 </html>
