--- a/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-fire.html
+++ b/5e_artisanal_database/magic_items/html/5.2_srd_(d&d_2024)/staff-of-fire.html
@@ -16,6 +16,30 @@
 <li><strong>Attunement:</strong> Yes</li>
 <li><strong>Source:</strong> 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>You have Resistance to Fire damage while you hold this staff. Spells. The staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell. Regaining Charges. The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff crumbles into cinders and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-fire.md">Markdown Format</a></p>
+<p>You have Resistance to Fire damage while you hold this staff.</p>
+<p><strong><em>Spells.</em></strong> The staff has 10 charges. While holding the staff, you can cast one of the spells on the following table from it, using your spell save DC. The table indicates how many charges you must expend to cast the spell.</p>
+<table>
+<thead>
+<tr>
+<th>Spell</th>
+<th>Charge Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Burning Hands</td>
+<td>1</td>
+</tr>
+<tr>
+<td>Fireball</td>
+<td>3</td>
+</tr>
+<tr>
+<td>Wall of Fire</td>
+<td>4</td>
+</tr>
+</tbody>
+</table>
+<p><strong><em>Regaining Charges.</em></strong> The staff regains 1d6 + 4 expended charges daily at dawn. If you expend the last charge, roll 1d20. On a 1, the staff crumbles into cinders and is destroyed.</p><p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/staff-of-fire.md">Markdown Format</a></p>
 </body>
 </html>
